--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -1,4 +1,4 @@
-<header class="m-1 row ">
+<header class="mx-1 row ">
   <div class="col-10">
       <h1 class="pt-2 h3 font-weight-bold">WakePoint</h1>
   </div>
@@ -8,9 +8,13 @@
   
  
 </header>
-<p class="small m-1">
-  Lat: {{lat}} <br> Long: {{lng}}
-</p>
+<div class="mx-3">
+  <!-- <p class="small">
+    Lat: {{lat}} Long: {{lng}}
+  </p> -->
+  <h6>Vali äratuse asukoht kaardilt -</h6>
+</div>
+
 <mgl-map
     [style]="'mapbox://styles/karlij301/cjp2dbhqx20m12rkd6l95begz'"
     [zoom]="[15]"
@@ -19,6 +23,14 @@
   <mgl-marker
      [lngLat]="[lng, lat]"
    >
-   <fa class="pull-right fa-3x" name="map-marker"></fa>
+   <fa class="pull-right fa-3x marker" name="map-marker"></fa>
    </mgl-marker>
   </mgl-map>
+<div class="mx-3 mt-1">
+  <h6>Sinu äratuse sihtpunkt on -</h6>
+  <input type="search" name="destination" id="destination" value="Vorbuse küla, Tartumaa">
+  <div class="buttons mt-3">
+    <button class="btn-wake btn-wake-red">Tühista</button>
+    <button class="btn-wake btn-wake-green">Ärata</button>
+  </div>
+</div>
