--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -15,7 +15,7 @@
   <h6>Vali äratuse asukoht kaardilt -</h6>
 </div>
 
-<app-map2></app-map2>
+<app-map></app-map>
 <div class="mx-3 mt-1">
   
   <!-- <input type="search" name="destination" id="destination" value="Vorbuse küla, Tartumaa"> -->
