--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,10 +3,8 @@
       <h1 class="pt-2 h3 font-weight-bold">WakePoint</h1>
   </div>
   <div class="col-2">
-      <a routerLink="settings"><fa class="pull-right fa-2x" name="cog"></fa></a>
+      <!-- <a routerLink="settings"><fa class="pull-right fa-2x" name="cog"></fa></a> -->
   </div>
-  
- 
 </header>
 <div class="mx-3">
   <!-- <p class="small">
@@ -16,15 +14,7 @@
 </div>
 
 <app-map></app-map>
-<div class="mx-3 mt-1">
-  
-  <!-- <input type="search" name="destination" id="destination" value="Vorbuse küla, Tartumaa"> -->
-  <div class="buttons mt-3">
-    <button class="btn-wake btn-wake-red">Tühista</button>
-    <button class="btn-wake btn-wake-green">Ärata</button>
-    <p>{{teade}}</p>
-  </div>
+
   
   
   
-</div>
