--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -1,3 +1,12 @@
 mgl-map{
     height: 60vh;
 }
+
+.buttons{
+    text-align: center;
+    /* position:absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -50%); */
+}
+
