rakenudse esimene variant on valmis

--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -3,7 +3,7 @@
       <h1 class="pt-2 h3 font-weight-bold">WakePoint</h1>
   </div>
   <div class="col-2">
-      <!-- <a routerLink="settings"><fa class="pull-right fa-2x" name="cog"></fa></a> -->
+      <a><fa class="pull-right fa-2x" name="cog"></fa></a>
   </div>
 </header>
 
