--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -13,3 +13,16 @@ mgl-map{
 .tiny{
     font-size: 10px;
 }
+
+.teade{
+    display: flex;
+    align-items: center;
+  justify-content: center;
+    background: rgba(0,0,0,.7);
+    position: absolute;
+    height: 100vh;
+    width: 100%;
+    top: 0;
+    bottom:0;
+    z-index: 10000;
+}
